[package]
name = "fix_viewer"
version = "0.1.0"
authors = ["Francis Chua <fqchua@stanford.edu>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = { git = "https://github.com/tweoss/egui.git", rev = "c8797e1" }
eframe = { git = "https://github.com/tweoss/egui.git", rev = "c8797e1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.72"
reqwest = { version = "0.11", features = ["json"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["rt", "time"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "^0.2" }
web-sys = { version = "0.3.64", features = ["Window"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
